tests/mm0_mmu/pass/whitespace1.mmu
--     v-- this is a SPACE
(sort s )
