tests/mm0_mmu/fail/bad-whitespace4.mmu
--      v-- this is a CARRIAGE RETURN
(sort s)
